# FourierTensoRF

./: .gitignore  README.md  pyproject.toml
dataparsers/: blender_free_nerf.py  blender_zerorf.py  dataparser_configs.py
fourier_tensorf/: fourier_tensorf.py  fourier_tensorf_config.py  fourier_tensorf_encoding.py  utils.py  zerorf_field.py
