[project]
name = "nerfstudio-fourier-tensorf"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["fourier_tensorf*","dataparsers*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
fourier_tensorf = 'fourier_tensorf.fourier_tensorf_config:fourier_tensorf'

# register the entry point of your dataparser here:
[project.entry-points.'nerfstudio.dataparser_configs']
blender-free-nerf = 'dataparsers.dataparser_configs:blender_free_nerf'

